--- a/gradle/dependencies/app_dependencies.toml
+++ b/gradle/dependencies/app_dependencies.toml
@@ -42,6 +42,7 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
