--- a/gradle/dependencies/app_dependencies.toml
+++ b/gradle/dependencies/app_dependencies.toml
@@ -17,6 +17,8 @@ junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 hilt = "2.47"
+activity = "1.7.2"
+facebook = "16.0.0"
 activity-compose = "1.7.2"
 compose-bom = "2023.08.00"
 appcompat = "1.6.1"
@@ -54,6 +56,8 @@ hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
+facebook = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebase" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth" }
