--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+RELEASE_STORE_FILE=release.keystore
+RELEASE_STORE_PASSWORD=12345678
+RELEASE_KEY_ALIAS=notes_key
+RELEASE_KEY_PASSWORD=12345678
