--- a/gradle/dependencies/app_dependencies.toml
+++ b/gradle/dependencies/app_dependencies.toml
@@ -9,7 +9,7 @@ firebase = "32.3.1"
 google-services = "4.4.0"
 play-services-auth = "20.4.1"
 androidxDataStore = "1.0.0"
-agp = "8.3.0-alpha07"
+agp = "8.3.2"
 kotlin = "1.9.0"
 core-ktx = "1.10.1"
 compose = "1.5.0"
